--- a/style/_global.scss
+++ b/style/_global.scss
@@ -23,6 +23,16 @@ body {
     .text-danger {
         color: $rojo ;
     }
+    p {
+        font-size: clamp(1.5rem, 2vw, 4rem);
+        font-family: "Verdana", "Geneva", sans-serif;
+        max-width: 90vw;
+        color:white;
+        margin: 10px;
+        text-align: center;
+        overflow-wrap: break-word;
+        word-break: break-word;
+    }
 }
 
 hr {
@@ -35,7 +45,8 @@ hr {
 
 .header {
     .headerImage {
-        width: 100%;
+        margin: 30px auto;
+        width: 60%;
         img {
             width: 100%;
             height: auto;
@@ -43,25 +54,24 @@ hr {
     }
     h1 {
         font-family: Trebuchet MS, sans-serif;
-        font-size: clamp(4rem, 4vw, 7rem);
-        letter-spacing: 0.05em;
+        font-size: clamp(4.5rem, 4vw, 7rem);
+        letter-spacing: 0.10em;
         color:white;
         text-align: center;
         flex-wrap: wrap;
         overflow-wrap: break-word;
         height: auto;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin: 15px 0;
     }
     h2 {
         font-family: Trebuchet MS, sans-serif;
-        font-size: clamp(2rem, 4vw, 5rem);
-        letter-spacing: 0.05em;
+        font-size: clamp(3rem, 4vw, 5rem);
+        letter-spacing: 0.10em;
         color: $rojo-fuerte;
         font-style: italic;
         text-align: center;
-        margin-top: 10px;
-        margin-bottom: 20px;
+        margin-top: 15px;
+        margin-bottom: 30px;
         flex-wrap: wrap;
         overflow-wrap: break-word;
     }
@@ -106,21 +116,18 @@ nav {
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 10px;
     text-align: center;
-    margin-top: auto;
-    margin-bottom: 20px;
+    margin: 10px auto 20px auto;
     a {
         color: $link;
         font-size: clamp(1rem, 2vw, 4rem);
         text-decoration: none;
         display: inline-block;
-        transition: all 0.5s ease;
         cursor: pointer;
         img {
-            width: 50%;
+            width: 80%;
             height: auto;
-            transition: transform 1s ease;
+            transition: transform 2s ease;
             &:hover {
                 transform: scale(1.2);
             }
@@ -132,29 +139,101 @@ nav {
 
 
 @media (max-width: 1024px) {
-    * {
-        margin: 5px;
-        padding: 0;
+    html {
+        background-color: $fondo;
+        margin: 2vh 2vw;
     }
+    body {
+        background-color: $fondo;
+        width: minmax(500px, 1024px);
+        margin: 0px 2vw;
+        height: 100%;
+    }
+    hr {
+        margin: 10px auto;
+    }
+    .header {
+        .headerImage {
+            margin: 20px auto;
+            width: 100%;
+            img {
+                width: 100%;
+                height: auto;
+            }
+        }
+        h1 {
+            font-size: clamp(2.5rem, 2vw, 5rem);
+            letter-spacing: 0.10em;
+            margin: 15px 0;
+        }
+        h2 {
+            font-size: clamp(2rem, 2vw, 3.5rem);
+            letter-spacing: 0.10em;
+            margin-top: 15px;
+            margin-bottom: 30px;
+        }
+        hr {
+            margin: 15px auto;            
+        }
+    }
+        p {
+            font-size: clamp(1.5rem, 2vw, 4rem);
+        }
+        .footer {
+            a {
+                img {
+                    width: 80%;
+                }
+            }
+        }
 }
 
 @media (max-width: 480px) {
-    * {
-        margin: 2vw;
-        padding: 0;
-    }
     html {
-        /*global font-size declaration!! To use rem units off of!*/
         background-color: $fondo;
+        margin: 4vh 4vw;
     }
     body {
         background-color: $fondo;
         width: minmax(300px, 480px);
-        margin-left: 2vw;
-        margin-right: 2vw;
+        margin: 0px 2vw;
         height: 100%;
-        .text-danger {
-            color: $rojo ;
+    }
+    hr {
+        margin: 10px auto;
+    }
+    .header {
+        .headerImage {
+            margin: 20px auto;
+            width: 100%;
+            img {
+                width: 100%;
+                height: auto;
+            }
+        }
+        h1 {
+            font-size: clamp(2.5rem, 2vw, 5rem);
+            letter-spacing: 0.10em;
+            margin: 15px 0;
+        }
+        h2 {
+            font-size: clamp(2rem, 2vw, 3.5rem);
+            letter-spacing: 0.10em;
+            margin-top: 15px;
+            margin-bottom: 30px;
+        }
+        hr {
+            margin: 15px auto;            
         }
     }
+        p {
+            font-size: clamp(1.5rem, 2vw, 4rem);
+        }
+        .footer {
+            a {
+                img {
+                    width: 80%;
+                }
+            }
+        }
 }
